--- a/app_modules/Sincronizacion/config.json
+++ b/app_modules/Sincronizacion/config.json
@@ -13,6 +13,11 @@
                     "module": "Sincronizacion",
                     "model": "SincronizacionModel",
                     "alias": "m_sincronizacion"
+                },
+                "clientes_model": {
+                    "module": "Terceros/Clientes",
+                    "model": "ClientesModel",
+                    "alias": "m_clientes"
                 }
             }],
         "events": [],
