--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "socket.io-client": "1.4.5",
     "socket.io-redis": "2.0.0",
     "sqlformatter": "^0.1.0",
+    "uuid": "^3.3.2",
     "xls-to-json": "*",
     "xml-formatter": "^1.0.1"
   }
