--- a/app_modules/CajaGeneral/config.json
+++ b/app_modules/CajaGeneral/config.json
@@ -13,6 +13,11 @@
                     "module": "CajaGeneral",
                     "model": "CajaGeneralModel",
                     "alias": "m_caja_general"
+                },
+                "sincronizacion_model": {
+                    "module": "Sincronizacion",
+                    "model": "SincronizacionModel",
+                    "alias": "m_sincronizacion"
                 }
             }],
         "events": [],
