--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "accounting": "~0.4.1",
+    "base64topdf": "^1.1.8",
     "bson": "^3.0.2",
     "commander": "2.1.0",
     "connect-multiparty": "~1.2.5",
@@ -33,6 +34,7 @@
     "mongodb": "^3.1.1",
     "node-xlsx": "~0.5.1",
     "nodemailer": "^0.6.5",
+    "pdf-to-base64": "^1.0.1",
     "pg": "^4.5.5",
     "pg-query": "0.x",
     "promise": "~7.1.1",
