--- a/app_modules/OrdenesCompra/config.json
+++ b/app_modules/OrdenesCompra/config.json
@@ -15,7 +15,12 @@
                 "pedidos_cliente_controller": {
                     "module": "PedidosClientes",
                     "controller": "PedidosClienteController",
-                    "alias": "c_pedidos_clientes"
+                    "alias": "c_pedidos_clientes"                
+                },
+                "pedidos_farmacias_controller": {
+                    "module": "PedidosFarmacias",
+                    "controller": "PedidosFarmaciasController",
+                    "alias": "c_pedidos_farmacias"
                 }
             }],
         "models": [{
@@ -68,6 +73,11 @@
                     "module": "PedidosClientes",
                     "model": "PedidosClienteModel",
                     "alias": "m_pedidos_clientes"
+                },
+                "pedidos_farmacias_model": {
+                    "module": "PedidosFarmacias",
+                    "model": "PedidosFarmaciasModel",
+                    "alias": "m_pedidos_farmacias"
                 }
         }],
         "events": [{
