--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "accounting": "~0.4.1",
+    "base64topdf": "^1.1.8",
     "bson": "^3.0.2",
     "commander": "2.1.0",
     "connect-multiparty": "~1.2.5",
