--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "mongodb": "^3.1.1",
     "node-xlsx": "~0.5.1",
     "nodemailer": "^0.6.5",
+    "package.json": "^2.0.1",
     "pg": "^4.5.5",
     "pg-query": "0.x",
     "promise": "~7.1.1",
