--- a/package.json
+++ b/package.json
@@ -36,14 +36,16 @@
     "nginx": "0.0.0",
     "node-xlsx": "~0.5.1",
     "nodemailer": "^0.6.5",
-    "pdf-to-base64": "^1.0.1",
     "os-tmpdir": "^2.0.0",
     "package.json": "^2.0.1",
+    "pdf-to-base64": "^1.0.1",
     "pg": "^4.5.5",
     "pg-query": "0.x",
     "promise": "~7.1.1",
     "q": "*",
     "rtc": "~3.4.0",
+    "scp2": "^0.5.0",
+    "sequest": "^0.10.0",
     "soap": "^0.24.0",
     "socket.io": "1.4.5",
     "socket.io-client": "1.4.5",
