--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "cron-cluster": "^1.0.0",
     "date-utils": "~1.2.15",
     "db-migrate": "0.6.4",
+    "detect-charset": "^0.1.0",
+    "encoding": "^0.1.12",
     "exceljs": "^1.4.6",
     "express": "^3.4.7",
     "fcm-push": "^1.1.2",
@@ -36,9 +38,9 @@
     "nginx": "0.0.0",
     "node-xlsx": "~0.5.1",
     "nodemailer": "^0.6.5",
-    "pdf-to-base64": "^1.0.1",
     "os-tmpdir": "^2.0.0",
     "package.json": "^2.0.1",
+    "pdf-to-base64": "^1.0.1",
     "pg": "^4.5.5",
     "pg-query": "0.x",
     "promise": "~7.1.1",
