Inicializando clases para Facturacion Electronica

--- a/app_modules/Sincronizacion/config.json
+++ b/app_modules/Sincronizacion/config.json
@@ -9,6 +9,11 @@
                 }
             }],
         "models": [{
+                "facturacion_model": {
+                  "module": "Classes",
+                  "model": "Facturas.class",
+                  "alias": "m_facturacionElectronica"
+                },
                 "sincronizacion_model": {
                     "module": "Sincronizacion",
                     "model": "SincronizacionModel",
