--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "log4js": "^1.1.1",
     "measured": "^1.1.0",
     "memory-cache": "^0.2.0",
+    "minimum-tls-version": "0.0.3",
     "moment": "^2.13.0",
     "mongodb": "^3.1.1",
     "nginx": "0.0.0",
