--- a/app_modules/FacturacionClientes/config.json
+++ b/app_modules/FacturacionClientes/config.json
@@ -47,6 +47,16 @@
                     "model": "PedidosClienteModel",
                     "alias": "m_pedidos_clientes"
                 },
+                "direccion_clases_model": {
+                    "module": "Classes",
+                    "model": "Direccion.class",
+                    "alias": "m_direccion"
+                },
+                "direccion_adquiriente_clases_model": {
+                    "module": "Classes",
+                    "model": "DireccionAdquiriente.class",
+                    "alias": "m_direccion_adquiriente"
+                },
                 "factura_clase_model": {
                     "module": "Classes",
                     "model": "Facturas.class",
