conexion con ws para facturacion electronica

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "moment": "^2.13.0",
     "mongodb": "^3.1.1",
     "nginx": "0.0.0",
+    "node-fetch": "^2.6.0",
     "node-gyp": "^4.0.0",
     "node-xlsx": "~0.5.1",
     "nodemailer": "^0.6.5",
