--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bson": "^3.0.2",
     "commander": "2.1.0",
     "connect-multiparty": "~1.2.5",
+    "cors": "^2.8.5",
     "cron": ">=1.0.1",
     "cron-cluster": "^1.0.0",
     "date-utils": "~1.2.15",
