--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "base64-img": "^1.0.4",
     "base64topdf": "^1.1.8",
     "bson": "^3.0.2",
+    "cluster": "^0.7.7",
     "commander": "2.1.0",
     "connect-multiparty": "~1.2.5",
     "cors": "^2.8.5",
@@ -23,7 +24,7 @@
     "exceljs": "^1.4.6",
     "express": "^3.4.7",
     "fcm-push": "^1.1.2",
-    "fs-extra": "~0.12.0",
+    "fs-extra": "^0.12.0",
     "iconv-lite": "^0.4.24",
     "intravenous": "^0.1.4-beta",
     "ip": "1.1.5",
@@ -45,11 +46,12 @@
     "nodemailer": "^0.6.5",
     "os-tmpdir": "^2.0.0",
     "package.json": "^2.0.1",
+    "path": "^0.12.7",
     "pdf-to-base64": "^1.0.1",
     "pg": "^4.5.5",
     "pg-query": "0.x",
     "promise": "~7.1.1",
-    "q": "*",
+    "q": "^1.5.1",
     "rebuild": "^0.1.2",
     "rtc": "~3.4.0",
     "scp2": "^0.5.0",
